k8s-optimized/00-namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: atlantiplex
  labels:
    name: atlantiplex
